force-app/main/default/objects/Food_Order__c/Food_Order__c.object-meta.xml
<CustomObject>
    <label>Food Order</label>
    <nameField>
        <label>Food Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>