force-app/main/default/objects/Food_Order__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <label>Customer_Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>