force-app/main/default/objects/Food_Order__c/fields/Delivery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery_Agent</label>
    <referenceTo>Delivery_Agent__c</referenceTo>
    <relationshipLabel>Food Orders</relationshipLabel>
    <relationshipName>Food_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>